--- a/base/css/is.css
+++ b/base/css/is.css
@@ -49,9 +49,13 @@
 }
 .stats-container > section h2 {
   margin: 0 0 1.2rem 0.5rem;
+  padding-top: 2.1rem;
   font-size: 1.8rem;
   color: #727272;
   font-weight: 700;
+}
+.stats-container > section h2:first-child {
+  padding-top: 0;
 }
 .stats-container > section .chart-container {
   border-radius: 0.5rem;
@@ -64,17 +68,18 @@
   padding: 2rem 1rem;
 }
 .stats-container .divide-4 {
+  overflow-y: auto;
+  height: 39.7rem;
   margin-top: 2.1rem;
 }
 .stats-container .divide-4.title-none {
+  overflow-y: visible;
+  height: auto;
   margin-top: 1rem;
 }
 .stats-container .divide-4.title-none > ul {
-  height: 44.3rem;
-}
-.stats-container .divide-4 ul {
   overflow-y: auto;
-  height: 40.2rem;
+  height: 40.8rem;
 }
 .stats-container .divide-4 li {
   display: -webkit-box;
@@ -147,8 +152,8 @@
 .stats-container .divide-4 li .chart-wrap .chart-container {
   height: 13.7rem;
 }
-.stats-container .divide-4 li:first-child {
-  margin-bottom: 1rem;
+.stats-container .divide-4 li + li {
+  margin-top: 1rem;
 }
 
 /* 교차로 비교 통계 > 비교 지점 선택 팝업 */
@@ -234,7 +239,10 @@
   background-position: 0 0;
   background-size: contain;
 }
-.crossroad-view-container .tab.segment > section > .tit {
+.crossroad-view-container .tab.segment > section:not(:first-child) {
+  border-top: 1px solid #dcdcdc;
+}
+.crossroad-view-container .tab.segment > section > .tit, .crossroad-view-container .tab.segment > section > .stats-tit-option > .tit, .crossroad-view-container .tab.segment > section > .tit-header .tit {
   display: block;
   margin-bottom: 1.5rem;
   font-size: 2rem;
@@ -260,6 +268,7 @@
   margin-bottom: 1rem;
 }
 .crossroad-view-container .display-info .left {
+  line-height: 100%;
   color: #1e5f8d;
   font-size: 2rem;
   font-weight: 500;
@@ -268,32 +277,90 @@
   font-size: 2.8rem;
   font-weight: 700;
 }
+.crossroad-view-container .time-analysis {
+  font-size: 1.2rem;
+  color: #999999;
+}
+.crossroad-view-container .stats-tit-option {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  gap: 0 0.8rem;
+}
+.crossroad-view-container .stats-tit-option-bind {
+  position: relative;
+  padding-top: 0.2rem;
+  font-size: 0;
+}
+.crossroad-view-container .stats-tit-option .ico-up-boxgray {
+  padding: 0;
+}
+.crossroad-view-container .stats-tit-option .option-list {
+  display: none;
+  position: absolute;
+  top: 2.6rem;
+  right: 0.2rem;
+  min-width: 10rem;
+  padding: 0.3rem;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border-radius: 0.5rem;
+  background: #fff;
+  -webkit-box-shadow: 2px 2px 8px 0px rgba(0, 0, 0, 0.15);
+          box-shadow: 2px 2px 8px 0px rgba(0, 0, 0, 0.15);
+}
+.crossroad-view-container .stats-tit-option .option-list button {
+  display: block;
+  line-height: 2rem;
+  padding: 0 0.4rem;
+  text-align: left;
+  font-size: 1.2rem;
+  color: #999999;
+  border-radius: 0.3rem;
+  -webkit-transition: background 0.2s;
+  transition: background 0.2s;
+}
+.crossroad-view-container .stats-tit-option .option-list button:not(:first-child) {
+  margin-top: 0.3rem;
+}
+.crossroad-view-container .stats-tit-option .option-list button:hover {
+  background: #e8e8e8;
+}
+.crossroad-view-container .stats-tit-option .option-list button.active {
+  color: #fff;
+  background: #999999;
+}
+.crossroad-view-container .tit-header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -ms-flex-line-pack: center;
+      align-content: center;
+}
 .crossroad-view-container .progress-bar {
   margin-bottom: 1.4rem;
-}
-.crossroad-view-container .stats-traffic {
-  padding: 3.7rem 4rem 3.1rem;
-  border-bottom: 1px solid #dcdcdc;
-}
-.crossroad-view-container .stats-speed {
-  padding: 2.6rem 4rem;
-  border-bottom: 1px solid #dcdcdc;
-}
-.crossroad-view-container .stats-speed .display-info .left em i {
-  font-size: 2.2rem;
-}
-.crossroad-view-container .stats-speed .chart-container {
-  height: 14.4rem;
-}
-.crossroad-view-container .stats-los {
-  padding: 2.6rem 4rem;
-}
-.crossroad-view-container .stats-los .display-info .left em {
-  font-size: 3.2rem;
-  color: #e57003;
-}
-.crossroad-view-container .stats-los .chart-container {
-  height: 15rem;
 }
 .crossroad-view-container .chart-container .dummy-img {
   display: block;
@@ -324,6 +391,106 @@
   background-repeat: no-repeat;
   background-position: 0 0;
   background-size: contain;
+}
+.crossroad-view-container .stats-traffic {
+  padding: 3.7rem 4rem 3.1rem;
+}
+.crossroad-view-container .stats-speed {
+  padding: 2.6rem 4rem;
+}
+.crossroad-view-container .stats-speed .display-info .left em i {
+  font-size: 2.2rem;
+}
+.crossroad-view-container .stats-speed .display-info .right {
+  text-align: right;
+}
+.crossroad-view-container .stats-speed .chart-container {
+  height: 14.4rem;
+}
+.crossroad-view-container .stats-los {
+  padding: 2.6rem 4rem;
+}
+.crossroad-view-container .stats-los .display-info .left em {
+  font-size: 3.2rem;
+  color: #e57003;
+}
+.crossroad-view-container .stats-los .chart-container {
+  height: 15rem;
+}
+.crossroad-view-container .video-container,
+.crossroad-view-container .accidents-container {
+  padding-top: 4.3rem !important;
+}
+.crossroad-view-container .cr-camera-info {
+  padding: 0 3rem 2.8rem;
+}
+.crossroad-view-container .cr-camera-info .data-tbl-gray.xs {
+  height: auto;
+}
+.crossroad-view-container .cr-camera-info .data-tbl-gray.xs table thead th {
+  padding: 0.95rem 0;
+}
+.crossroad-view-container .cr-camera-view,
+.crossroad-view-container .license-plate-recognition {
+  padding: 3.2rem 3rem 3.5rem;
+}
+.crossroad-view-container .cr-camera-view .tbl-custom-radio-container th,
+.crossroad-view-container .license-plate-recognition .tbl-custom-radio-container th {
+  font-size: 1.4rem;
+  color: #1e5f8d;
+  font-weight: 500;
+  text-align: left;
+  vertical-align: middle;
+}
+.crossroad-view-container .cr-camera-view .tbl-custom-radio-container th,
+.crossroad-view-container .cr-camera-view .tbl-custom-radio-container td,
+.crossroad-view-container .license-plate-recognition .tbl-custom-radio-container th,
+.crossroad-view-container .license-plate-recognition .tbl-custom-radio-container td {
+  padding-bottom: 0.4rem;
+}
+.crossroad-view-container .accidents-stats {
+  padding: 0 3rem 4rem;
+}
+.crossroad-view-container .accidents-stats-content {
+  position: relative;
+}
+.crossroad-view-container .accidents-stats-content .cumulative-num {
+  position: absolute;
+  left: 0;
+  bottom: 1rem;
+  z-index: 2;
+  width: 100%;
+  text-align: center;
+  color: #3d3d3d;
+}
+.crossroad-view-container .accidents-stats-content .cumulative-num dt {
+  font-size: 1.6rem;
+  font-weight: 600;
+}
+.crossroad-view-container .accidents-stats-content .cumulative-num dd {
+  font-size: 1.2rem;
+  font-weight: 300;
+}
+.crossroad-view-container .accidents-list {
+  padding: 3.2rem 3rem 0;
+}
+.crossroad-view-container .accidents-list .data-tbl-gray.xs {
+  height: 26.4rem;
+}
+.crossroad-view-container .accidents-list .data-tbl-gray.xs table thead th {
+  padding: 0.95rem 0;
+}
+.crossroad-view-container .accidents-list .data-tbl-gray.xs table tbody td {
+  vertical-align: middle;
+}
+.crossroad-view-container .accidents-list .data-tbl-gray.xs table tbody td .ico-picture {
+  padding: 0;
+}
+.crossroad-view-container .accidents-list .ui.secondary.basic {
+  width: calc(100% - 3rem);
+  margin-top: 11.2rem;
+  line-height: 2.9rem;
+  font-size: 1.6rem;
 }
 
 /* ROI설정 탭 화면 */
