--- a/base/css/is.css
+++ b/base/css/is.css
@@ -683,6 +683,10 @@
   border-radius: 0.2rem;
   vertical-align: top;
 }
+.roi-view-container .roi-set-list-section .data-tbl-gray table td [class*=color]:hover {
+  -webkit-box-shadow: none;
+          box-shadow: none;
+}
 .roi-view-container .roi-set-list-section .data-tbl-gray table td .ico-wastebasket {
   padding: 0;
   vertical-align: top;
@@ -826,6 +830,10 @@
           box-shadow: 0px 0px 2px 2px #00632d inset;
 }
 .roi-view-container .traffic-lane-choice {
+  display: none;
+  margin-top: 1rem;
+}
+.roi-view-container .traffic-lane-choice.active {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -842,7 +850,6 @@
   -ms-flex-line-pack: center;
       align-content: center;
   gap: 0 0.7rem;
-  margin-top: 1rem;
 }
 .roi-view-container .traffic-lane-choice [class*=lane] {
   width: 4rem;
@@ -1022,6 +1029,9 @@
 /* 교차로 ROI 탭 */
 .tab-crossroad-roi .roi-set-list-section .data-tbl-gray {
   height: 23.1rem;
+}
+.tab-crossroad-roi .roi-set-list-section .data-tbl-gray .writing-reduce {
+  max-width: 9rem;
 }
 
 [data-tab=road-direction1] table:first-child,
