--- a/base/css/style.css
+++ b/base/css/style.css
@@ -1004,6 +1004,13 @@ body ::-webkit-scrollbar-track {
   color: #727272;
   border-bottom: 1px solid #e8e8e8;
 }
+.data-tbl-gray table tbody td .writing-reduce {
+  display: inline-block;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  word-wrap: normal;
+}
 .data-tbl-gray table tbody tr:last-child td {
   border-bottom: 0;
 }
